add teget black attribute

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda facere cum ullam, maxime excepturi consequatur consequuntur magnam blanditiis tempore esse aliquid dolorem ea expedita porro tempora molestias aut soluta incidunt!
     cities,visited historic sites,and enjoyed the stunning views,It was a trip will never <br>forget!</p>
     <br>
-    <a class="button" href="https://www.programming-hero.com/">Read more</a>
+    <a class="button" href="https://www.programming-hero.com/" target="_blank">Read more</a>
 </div>
 <div>
     <h3><b>What i bought:</b></h3>
